Various code simplification/fixes and a lot of typo/grammar fixes (may brake some stuff)